[gd_scene load_steps=2 format=3 uid="uid://driving_range_distance_dialog"]

[ext_resource type="Script" path="res://UI/DrivingRangeDistanceDialog.gd" id="1_script"]

[node name="DrivingRangeDistanceDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="DialogBox" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -125.0
offset_right = 200.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.9)

[node name="TitleLabel" type="Label" parent="DialogBox"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_constants/outline_size = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Drive Distance"
horizontal_alignment = 1

[node name="DistanceLabel" type="Label" parent="DialogBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -30.0
offset_right = 150.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "0 pixels"
horizontal_alignment = 1

[node name="RecordLabel" type="Label" parent="DialogBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_constants/outline_size = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "NEW RECORD!"
horizontal_alignment = 1

[node name="ShotLabel" type="Label" parent="DialogBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 40.0
offset_right = 150.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.827, 0.827, 0.827, 1)
text = "Shot 1 of 10"
horizontal_alignment = 1

[node name="InstructionLabel" type="Label" parent="DialogBox"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = -10.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.827, 0.827, 0.827, 1)
text = "Click anywhere to continue"
horizontal_alignment = 1 